src/app.css
/* ... */
#app {
    display: contents;
}

.background-grid {
    background-color: #f0f;
    background-image: linear-gradient(#222 1px, transparent 1px),
        linear-gradient(90deg, #222 1px, transparent 1px);
    background-size: 1rem 1rem;
}

.response.markdown {
    overflow-x: unset;

    ol,
    ul {
        margin-top: 0;
        list-style: square;
        margin-left: 1em;
        list-style-type: decimal;

        li {
            margin-bottom: 0.5em;
        }
    }

    pre {
        max-width: 100%;
        color: #fb0;
        background-color: #000;
        line-height: 1.1em;
        font-family: monospace !important;
        background-image: linear-gradient(0deg, #ffffff16 0%, transparent 100%);
        background-size: 100% 4px;
        background-repeat: repeat-y;
        border-radius: var(--border-radius-standard);
        border-bottom: 1px solid #333;
        font-size: 0.8em;
        letter-spacing: -1px;
        white-space: break-spaces;
        margin-block: 1em;
    }

    em,
    strong {
        /* color: rgb(193, 166, 91) !important;*/
        color: var(--color-primary-400, #f0f) !important;
        font-weight: bold;

        &::before {
            content: "**";
            font-weight: normal;
            opacity: 0.65;
        }

        &::after {
            content: "**";
            font-weight: normal;
            opacity: 0.65;
        }
    }

    em {
        &::before {
            content: "*";
            font-weight: normal;
            opacity: 0.65;
        }

        &::after {
            content: "*";
            font-weight: normal;
            opacity: 0.65;
        }
    }

    code {
        font-family: monospace !important;
        color: rgb(191, 191, 191);
        line-height: 1.1em;
    }

    p {
        margin-bottom: 1em;
    }

    hr {
        margin: 2em 10% !important;
        border: 1px;
        border-color: #40f;
        border-style: dashed;
    }

    h5,
    h4,
    h3,
    h2,
    h1 {
        color: white !important;
        font-weight: bold;
        margin: 1em 0 0.5em 0 !important;
        border-bottom: 4px double rgba(255, 255, 255, 0.35);
        padding-bottom: 0.5em;
        font-size: 1.5em !important;

        &::before {
            content: "# ";
            opacity: 0.5;
        }

        strong {
            color: inherit !important;

            &::before,
            &::after {
                content: unset;
            }

            text-decoration: underline;
        }
    }

    h2 {
        color: rgb(104, 187, 255) !important;
        font-size: 1.3em !important;
        border-bottom: 2px solid white;
        border-bottom-style: dashed !important;
        border-bottom-color: rgba(104, 187, 255, 0.5) !important;

        width: 90%;

        &::before {
            content: "## ";
            opacity: 0.5;
        }
    }

    h3 {
        color: rgb(104, 255, 187) !important;
        width: 80%;
        font-size: 1.1em !important;
        border-bottom: 3px solid white;
        border-bottom-style: dotted;

        border-bottom-color: rgba(104, 255, 187, 0.25) !important;

        &::before {
            content: "### ";
            opacity: 0.5;
        }
    }

    h4 {
        color: rgb(255, 104, 187) !important;
        font-size: 0.9em !important;
        font-weight: bold;
        font-style: italic;
        border-bottom: none;
        text-decoration: none;

        &::before {
            content: "#### ";
            opacity: 0.5;
        }
    }

    h5 {
        color: white !important;
        font-size: 0.8em !important;
        font-weight: normal;
        font-style: italic;
        border-bottom: none;
        text-decoration: none;

        &::before {
            content: "##### ";
            opacity: 0.5;
        }
    }

    h6 {
        color: #aaa !important;
        font-size: 0.8em !important;
        font-weight: normal;
        border-bottom: none;
        text-decoration: none;

        &::before {
            content: "###### ";
            color: white;
            opacity: 0.25;
        }
    }

    table {
        outline: 1px solid var(--color-neutral-darker2);
        box-shadow: 0 0 20px black;
        width: 100%;
        margin-block: 1em;

        th {
            background-color: var(--color-accent-darker2);
            font-weight: bold;
            padding: 0.5em;
            text-align: center !important;
            color: var(--color-accent) !important;

            strong {
                color: black !important;

                &::before,
                &::after {
                    content: unset;
                }
            }
        }

        tr {
            background-color: --color-background-darker;
            color: white;

            td {
                outline: 1px solid var(--color-background-darker);
                padding: 0.25em;

                text-align: left !important;
            }
        }
    }

    blockquote {
        font-family: serif;
        color: darkgray;
        font-size: 0.75em;
        font-weight: 300;
        /* font-style: italic ; */
        font-synthesis: initial;
        border-left: 0.25em double #555;
        padding-left: 1.2em;
        border-radius: 10px;
        position: relative;

        &::before {
            content: "❝";
            color: #777;
            position: absolute;
            font-size: 1.2em;
            left: 0.2em;
            top: -0.2em;
        }
    }
}
/* ... */

